--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flighty-mango",
+  "name": "one-more-snake",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --fix --ext .ts,.tsx .",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "tsc": "tsc"
   },
   "dependencies": {
     "eslint-plugin-jsx-a11y": "^6.7.1",
